--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>${postgres.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.dozermapper</groupId>
+            <artifactId>dozer-core</artifactId>
+            <version>${dozer.version}</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
